tests/invalid_programs/expression.jas
// Expect semicolon after expression.

println("nice")
